--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=codefresh_argo-cd
-sonar.organization=codefresh-argo-cd
+sonar.projectKey=argo-cd
+sonar.organization=codefresh-io
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=argo-cd
