--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 
 images:
 - name: quay.io/argoproj/argocd
-  newName: quay.io/argoproj/argocd
+  newName: quay.io/codefresh/argocd
   newTag: v2.1.0
 resources:
 - ./application-controller
