--- a/manifests/ha/base/kustomization.yaml
+++ b/manifests/ha/base/kustomization.yaml
@@ -10,7 +10,7 @@ patchesStrategicMerge:
 
 images:
 - name: quay.io/argoproj/argocd
-  newName: quay.io/argoproj/argocd
+  newName: quay.io/codefresh/argocd
   newTag: v2.1.0
 resources:
 - ../../base/application-controller
