--- a/.github/workflows/ci-build.yaml
+++ b/.github/workflows/ci-build.yaml
@@ -2,14 +2,14 @@ name: Integration tests
 on:
   push:
     branches:
-      - 'master'
+      # - 'master'
       - 'release-*'
       - '!release-1.4'
       - '!release-1.5'
   pull_request:
     branches:
-      - 'master'
-      - 'release-*'
+      # - 'master'
+      - 'release-*' # Codefresh change instead of `master`
 
 env:
   # Golang version to use across CI steps
