--- a/.github/workflows/image.yaml
+++ b/.github/workflows/image.yaml
@@ -40,6 +40,17 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
           PASSWORD: ${{ secrets.TOKEN }}
 
+      # Codefresh step
+      - name: Push docker image to quay repository
+        env:
+          QUAY_USERNAME: ${{ secrets.RELEASE_QUAY_USERNAME }}
+          QUAY_TOKEN: ${{ secrets.RELEASE_QUAY_TOKEN }}
+        run: |
+          set -ue
+          docker login quay.io --username "${QUAY_USERNAME}" --password "${QUAY_TOKEN}"
+          docker tag ghcr.io/codefresh-io/argocd:${{ steps.image.outputs.tag }} ${IMAGE_NAMESPACE}/argocd:latest
+          docker push ${IMAGE_NAMESPACE}/argocd:latest
+
       # deploy
       - run: git clone "https://$TOKEN@github.com/codefresh-io/argoproj-deployments"
         env:
