--- a/manifests/base/kustomization.yaml
+++ b/manifests/base/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 images:
 - name: quay.io/argoproj/argocd
   newName: quay.io/codefresh/argocd
-  newTag: latest
+  newTag: release-v2.3.3-cap-CR-kustomize-components
 resources:
 - ./application-controller
 - ./dex
